--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.3.3"
-serde = "1.0.215"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
